--- a/src/assets/images/readme
+++ b/src/assets/images/readme
@@ -1,1 +1,2 @@
-#icons from: https://material.io/tools/icons/?icon=check_box_outline_blank&style=outline
+#icons from:
+http://www.material.io/tools/icons/?icon=check_box_outline_blank&style=outline
